# Algobowl

./: .gitignore  CMakeLists.txt  README.md
include/: Algorithm.h  Input.h  Validator.h
input_data/: test.txt
src/: Algorithm.cpp  Input.cpp  Validator.cpp  main.cpp
